--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@evolvejs/evolava": "^1.0.2",
     "canvacord": "^5.0.8",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "erela.js": "^2.3.2",
+    "erela.js-spotify": "^1.2.0",
+    "gorilink": "^1.3.2",
     "mongoose": "^5.11.17",
-    "random": "^2.2.0"
+    "random": "^2.2.0",
+    "shoukaku": "^1.6.3"
   }
 }
